# rtic-issue-sw-tasks

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config
src/: main.rs
